# personal-op-bot

./: .dockerignore  COPYRIGHT  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  config.toml.example
.github/workflows/: ci.yml  docker.yml
src/: main.rs
