[package]
name = "personal-op-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rust-argon2 = "1.0"

futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

irc = { git = "https://github.com/simnalamburt/irc" } # NOTE: https://github.com/aatxe/irc/pull/236
