[package]
name = "personal-op-bot"
version = "1.0.2"
edition = "2021"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
description = "A simple and ignorant IRC OP maintenance bot"
repository = "https://github.com/simnalamburt/personal-op-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rust-argon2 = "2"
clap = { version = "4.3.1", features = ["derive"] }

futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
irc = "1"
